--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
             .winner-text
             {
+                font-size: calc(1rem + 1vw);
                 text-align: center;
                 font-family: 'Montserrat';
             }
@@ -84,6 +85,7 @@
             .winner img
             {
                 margin-top: 13px;
+                margin-left: 10px;
                 width: 250px;
                 height: 250px;
                 border: 2px solid green;
