--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 
             .winner
             {
-                border-radius: 50px;
                 padding: 60px;
             }
 
@@ -140,6 +139,12 @@
                     border-radius: 4px;
                 }
 
+                
+                .winner
+                {
+                    padding: 60px;
+                }
+                
                 .description
                 {
                     font-family: 'Open Sans';
