--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 
             .winner-text
             {
-                font-size: calc(1rem + 1vw);
                 text-align: center;
                 font-family: 'Montserrat';
             }
@@ -83,7 +82,6 @@
             .winner img
             {
                 margin-top: 13px;
-                margin-left: 10px;
                 width: 250px;
                 height: 250px;
                 border: 2px solid green;
@@ -139,12 +137,6 @@
                     border-radius: 4px;
                 }
 
-                
-                .winner
-                {
-                    padding: 60px;
-                }
-                
                 .description
                 {
                     font-family: 'Open Sans';
@@ -170,6 +162,7 @@
                 .winner img
                 {
                     margin-top: 13px;
+                    margin-left: 10px;
                     width: 150px;
                     height: 150px;
                     border: 2px solid green;
@@ -178,6 +171,8 @@
 
                 .special
                 {
+                    width: 0px;
+                    height: 0px;
                     border-right: none;
                 }
 
@@ -185,8 +180,8 @@
                 {
                     font-family: 'Open Sans';
                     font-size: 16px;
-                    margin-left: 0px;
-                    line-height: 50px;
+                    margin-left: 60px;
+                    margin-top: 70px;
                 }
             }
         </style>
@@ -218,9 +213,11 @@
                     <div class="special">
                         <img src="Members Images/Aaryan.jpg" alt="Winner">
                     </div>
-                    <p class="winner-description">
-                        Games
-                    </p>
+                    <div>
+                        <p class="winner-description">
+                            Games
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
